--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "deploy": "wrangler deploy --minify"
   },
   "dependencies": {
-    "hono": "^4.6.3"
+    "hono": "^4.6.3",
+    "https": "^1.0.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240925.0",
