--- a/wrangler.toml
+++ b/wrangler.toml
@@ -25,3 +25,7 @@ compatibility_flags = [ "nodejs_compat" ]
 # [observability]
 # enabled = true
 # head_sampling_rate = 1
+
+mtls_certificates = [
+ { binding = "MY_CERT", certificate_id = "92ef8f8c-74d4-46dc-9bcc-90f69631332b" }
+]
